--- a/grub.cfg
+++ b/grub.cfg
@@ -1,7 +1,9 @@
+insmod vga
 insmod vbe
 
 menuentry "MishaOS" {
 	multiboot /boot/mishaos.bin vid=preset,1024,768
 	set gfxpayload=1024x768x32
 	module /boot/initrd.img
+	boot
 }
