--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install mtools
-        run: sudo apt install mtools
+      - name: Install mtools, nasm, mkisofs
+        run: sudo apt install mtools nasm mkisofs
       - name: Install i686-elf-tools
         run: wget https://github.com/lordmilko/i686-elf-tools/releases/download/7.1.0/i686-elf-tools-linux.zip -O ~/elf-tools.zip && mkdir -p ~/elf-tools && unzip ~/elf-tools.zip -d ~/elf-tools
       - name: Build MishaOS
@@ -17,4 +17,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: MishaOS
-          path: mishaos.iso
+          path: mishaos*.iso
