--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,14 +7,42 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: true
       - name: Install mtools, nasm, mkisofs
         run: sudo apt install mtools nasm mkisofs
       - name: Install i686-elf-tools
-        run: wget https://github.com/lordmilko/i686-elf-tools/releases/download/7.1.0/i686-elf-tools-linux.zip -O ~/elf-tools.zip && mkdir -p ~/elf-tools && unzip ~/elf-tools.zip -d ~/elf-tools
+        run: wget https://github.com/lordmilko/i686-elf-tools/releases/download/7.1.0/i686-elf-tools-linux.zip -O ~/elf-tools.zip && mkdir -p ~/i686-elf-tools && unzip ~/elf-tools.zip -d ~/i686-elf-tools
+      - name: Install x86_64-elf-tools
+        run: wget https://github.com/lordmilko/i686-elf-tools/releases/download/7.1.0/x86_64-elf-tools-linux.zip -O ~/elf-tools.zip && mkdir -p ~/x86_64-elf-tools && unzip ~/elf-tools.zip -d ~/x86_64-elf-tools
+      - name: Build i686-binutils
+        run: |
+          wget https://ftp.gnu.org/gnu/binutils/binutils-2.40.tar.xz -O ~/binutils.tar.xz
+          pushd ~
+          tar -xf binutils.tar.xz
+          cd binutils-2.40
+          ./configure --enable-targets=all --target="i686-elf" --disable-nls
+          make -j2
+          sudo make install
+          cd ..
+          rm -rf binutils-2.40
+          popd
+      - name: Build x86_64-binutils
+        run: |
+          wget https://ftp.gnu.org/gnu/binutils/binutils-2.40.tar.xz -O ~/binutils.tar.xz
+          pushd ~
+          tar -xf binutils.tar.xz
+          cd binutils-2.40
+          ./configure --enable-targets=all --target="x86_64-elf" --disable-nls
+          make -j2
+          sudo make install
+          cd ..
+          rm -rf binutils-2.40
+          popd
       - name: Build MishaOS
-        run: export PATH=$PATH:~/elf-tools/bin && ./build.sh
-      - name: Upload MishaOS iso
+        run: export PATH=$PATH:~/i686-elf-tools/bin:~/x86_64-elf-tools/bin && ./build.sh
+      - name: Upload MishaOS binaries
         uses: actions/upload-artifact@v2
         with:
           name: MishaOS
-          path: mishaos*.iso
+          path: mishaos*.*
