--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mishaboot/eboot/gnu-efi"]
 	path = mishaboot/eboot/gnu-efi
-	url = https://git.code.sf.net/p/gnu-efi/code
+	url = https://github.com/JNNGL/gnu-efi
